--- a/oscar/templates/dashboard/orders/summary.html
+++ b/oscar/templates/dashboard/orders/summary.html
@@ -1,6 +1,6 @@
 {% extends 'dashboard/layout.html' %}
 {% load currency_filters %}
-
+{% block body_class %}orders{% endblock %}
 {% block title %}
 Order statistics | {{ block.super }}
 {% endblock %}
