--- a/oscar/templates/dashboard/reports/index.html
+++ b/oscar/templates/dashboard/reports/index.html
@@ -1,6 +1,6 @@
 {% extends 'dashboard/layout.html' %}
 {% load currency_filters %}
-
+{% block body_class %}reports{% endblock %}
 {% block title %}
 Reports
 {% endblock %}
