--- a/oscar/templates/dashboard/users/index.html
+++ b/oscar/templates/dashboard/users/index.html
@@ -1,6 +1,6 @@
 {% extends 'dashboard/layout.html' %}
 {% load dashboard_tags %}
-
+{% block body_class %}users{% endblock %}
 {% block title %}
 Users | {{ block.super }}
 {% endblock %}
