--- a/oscar/templates/dashboard/orders/order_list.html
+++ b/oscar/templates/dashboard/orders/order_list.html
@@ -1,6 +1,6 @@
 {% extends 'dashboard/layout.html' %}
 {% load currency_filters %}
-
+{% block body_class %}orders{% endblock %}
 {% block title %}
 Order management | {{ block.super }}
 {% endblock %}
