--- a/oscar/templates/dashboard/promotions/pagepromotion_list.html
+++ b/oscar/templates/dashboard/promotions/pagepromotion_list.html
@@ -1,5 +1,6 @@
 {% extends 'dashboard/layout.html' %}
 {% load currency_filters %}
+{% block body_class %}content-blocks{% endblock %}
 
 
 {% block header %}
