--- a/oscar/templates/dashboard/promotions/promotion_list.html
+++ b/oscar/templates/dashboard/promotions/promotion_list.html
@@ -1,6 +1,6 @@
 {% extends 'dashboard/layout.html' %}
 {% load currency_filters %}
-
+{% block body_class %}content-blocks{% endblock %}
 {% block title %}
 Content blocks | {{ block.super }}
 {% endblock %}
