--- a/oscar/templates/promotions/rawhtml.html
+++ b/oscar/templates/promotions/rawhtml.html
@@ -1,2 +1,6 @@
-<h4>{{ promotion.name }}</h4>
-{{ promotion.body|safe }}
+<section class="well well-blank">
+    <div class="sub-header">
+        <h2>{{ promotion.name }}</h4>
+    </div>
+    {{ promotion.body|safe }}
+</div>
