--- a/oscar/templates/promotions/handpickedproductlist.html
+++ b/oscar/templates/promotions/handpickedproductlist.html
@@ -1,27 +1,49 @@
 {% load currency_filters %}
+<section class="well well-blank">
+    <div class="sub-header">
+        <h2>{{ promotion.name }}</h2>
+    </div>
+    <p>{{ promotion.description }}</p>
 
-<h2>{{ promotion.name }}</h2>
 
-<p>{{ promotion.description }}</p>
+    <!-- Elastislide Carousel -->
+    <div class="es-carousel-wrapper">
+        <div class="es-carousel">
+            <ul>
+                {% for product in promotion.get_products %}
+                <li>
+                    <article class="product_pod">
+                        {% with product.images.all.0 as image %}
+                        <div class="image_container">
+                            <a href="{{ product.get_absolute_url }}"><img class="thumbnail" src="{{ image.original.url }}" alt="{{ product.get_title }}"></a>
+                        </div>    
+                        {% endwith %}
+                        <h3><a href="{{ product.get_absolute_url }}">{{ product.get_title|truncatewords:5|slice:"-4" }}</a></h3>
+                        <div class="product_price">
+                            {% if product.is_group %}
+                            From {{ product.min_variant_price_incl_tax|currency }}
+                            {% else %}
+                            {% if product.has_stockrecord %} 
+                            <h4><span>{{ product.stockrecord.price_incl_tax|currency }}</span></h4>
+                            <p class="app-ico avaliability instock">{{ product.stockrecord.availability|truncatewords:2|slice:"-4" }}</p>
+                            {% else %}
+                            <p class="app-ico avaliability outstock">Not available</p>
+                            {% endif %}
+                            {% endif %}
+                        </div>
+                    </article>    
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+    <!-- End Elastislide Carousel -->
 
-<ol>
-{% for product in promotion.get_products %}
-<li>
-    <a href="{{ product.get_absolute_url }}">{{ product.get_title }}</a><br/>
-    {% if product.is_group %}
-        From {{ product.min_variant_price_incl_tax|currency }}
-    {% else %}
-        {% if product.has_stockrecord %} 
-            {{ product.stockrecord.price_incl_tax|currency }}<br/>
-            {{ product.stockrecord.availability }}
-        {% else %}
-            Not available    
-        {% endif %}
-    {% endif %}    
-</li>
-{% endfor %}
-</ol>
+
+
+
 
 {% if block.link_url %}
     <a href="{{ block.link_url }}">See more</a>
 {% endif %}
+</section>
