Changes to the dashboard

--- a/oscar/templates/dashboard/promotions/pagepromotion_list.html
+++ b/oscar/templates/dashboard/promotions/pagepromotion_list.html
@@ -13,6 +13,16 @@
 Pages with content blocks | {{ block.super }}
 {% endblock %}
 
+{% block breadcrumbs %}
+<ul class="breadcrumb">
+    <li>
+        <a href="{% url promotions:home %}">Dashboard</a>
+        <span class="divider">/</span>
+    </li>
+    <li class="active"><a href=".">Content block management</a></li>
+</ul>
+{% endblock %}
+
 {% block dashboard_content %}
 
 <div class="well well-info">
