--- a/oscar/static/less/page/plugins.less
+++ b/oscar/static/less/page/plugins.less
@@ -273,6 +273,8 @@
 	background:url(../img/ui/bg-stars-small.png) 0px -4px no-repeat;
 	height:11px;
 	line-height:11px;
+	width: 65px;
+  margin: 0px auto 4px;
 }
 .product_pod .star.One {
 	background-position: 0px -18px;
