--- a/oscar/templates/customer/history/recently-viewed-products.html
+++ b/oscar/templates/customer/history/recently-viewed-products.html
@@ -1,4 +1,5 @@
 {% load currency_filters %}
+{% load basket_tags %}
 
 {% if products %}
 <div class="sub-header">
@@ -16,8 +17,7 @@
 				        <a href="{{ product.get_absolute_url }}"><img class="thumbnail" src="{{ image.original.url }}" alt="{{ product.get_title }}"></a>
 				    </div>    
 				    {% endwith %}
-                    <h3><a href="{{ product.get_absolute_url }}">{{ product.get_title }}</a></h3>
-                    <p>{{ product.description|truncatewords:7 }}</p>
+                    <h3><a href="{{ product.get_absolute_url }}">{{ product.get_title|truncatewords:7 }}</a></h3>
                     <div class="product_price">
                         {% if product.is_group %}
                             <p>From {{ product.min_variant_price_incl_tax|currency }}</p>
