--- a/oscar/templates/dashboard/promotions/form.html
+++ b/oscar/templates/dashboard/promotions/form.html
@@ -15,7 +15,7 @@
 	{% include "partials/form_fields.html" with form=form %}
 	<div class="form-actions">
         <button type="submit" class="btn btn-primary">Save</button>
-		or <a href="{% url dashboard:promotion-list %}">cancel</a>
+		or <a href="{% url dashboard:promotion-list %}"><button class="btn btn-danger">Cancel</button></a>
 	</div>
 </form>
 {% endblock %}
