--- a/oscar/static/less/page/head_foot.less
+++ b/oscar/static/less/page/head_foot.less
@@ -10,11 +10,11 @@
 }
 .page-header,
 .sub-header {
-  background:lighten(@black, 98%);
+  background:lighten(@grayLighter, 4.5%);
   padding:@gridGutterWidth;
   margin-top:0px;
   margin-bottom: @baseLineHeight;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid darken(@grayLighter, 5.5%);
 }
 .sub-header {
   background:none;
