--- a/oscar/templates/partials/form_fields.html
+++ b/oscar/templates/partials/form_fields.html
@@ -1,13 +1,17 @@
 {% for field in form %}
 <div class="control-group {% for error in field.errors %}error{% endfor %}">
-    {{ field.label_tag }}
-    <div class="controls">            
-        {{ field }}
-        {% for error in field.errors %}
-            <span class="help-block">
-                {{ error|escape }}
-            </span>
-        {% endfor %}
-    </div>
+	{% if field.is_hidden %}
+		{{ field }}
+	{% else %}
+		{{ field.label_tag }}
+		<div class="controls">
+			{{ field }}
+			{% for error in field.errors %}
+				<span class="help-block">
+					{{ error|escape }}
+				</span>
+			{% endfor %}
+		</div>
+	{% endif %}
 </div>
 {% endfor %}
