added style_guide.html template in flat pages, with hardcoded site styles - soon to be dynamic.

--- a/oscar/static/less/bootstrap/buttons.less
+++ b/oscar/static/less/bootstrap/buttons.less
@@ -133,7 +133,7 @@
 }
 // Success appears as green
 .btn-success {
-  .buttonBackground(#62c462, #51a351);
+  .buttonBackground(lighten(@green, 15%), @green);
 }
 // Info appears as a neutral blue
 .btn-info {
