--- a/oscar/static/less/page/plugins.less
+++ b/oscar/static/less/page/plugins.less
@@ -291,3 +291,19 @@
 .product_pod .star.Five {
 	background-position: 0px -75px;
 }
+/*style guide*/
+.swatch {
+display: inline-block;
+width: 30px;
+height: 20px;
+margin: -6px 0;
+background:@gray;
+.border-radius(3px);
+}
+.swatch-col {
+width: 30px;
+}
+.test-opacity { .opacity(50) }
+.test-square { .square(25px) }
+.test-size { .size(25px, 7px) }
+.test-center { .center-block() }
