--- a/oscar/templates/flatpages/style_guide.html
+++ b/oscar/templates/flatpages/style_guide.html
@@ -14,138 +14,205 @@
 {% block flatpage %}
 <article>
     {{ flatpage.content }}
-    
     <div class="sub-header">
-        <h2>Colour <small>Links</small></h2>
+        <h2>Colours</h2>
     </div>
-    <table class="table table-striped table-bordered">
-        <tr>
-            <th>Variable</th>
-            <th>Hex Value</th>
-            <th>Color</th>
-        </tr>
-        <tr>
-            <td>@linkColor</td>
-            <td>#08c</td>
-            <td style="background-color:#08c"></td>
-        </tr>
-        <tr>
-            <td>@linkColorHover</td>
-            <td>darken(@linkColor, 15%)</td>
-            <td style="background-color:#005580"></td>
-        </tr>
+    <h3>Hyperlinks</h3>
+    <table class="table table-bordered table-striped">
+        <tbody>
+            <tr>
+                <td><code>@linkColor</code></td>
+                <td>#08c</td>
+                <td>Default link text color</td>
+                <td class="swatch-col"><span class="swatch" style="background-color: #08c;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@linkColorHover</code></td>
+                <td><code>darken(@linkColor, 15%)</code></td>
+                <td>Default link text hover color</td>
+                <td><span class="swatch" style="background-color: #005580;"></span></td>
+            </tr>
+        </tbody>
     </table>
-    
-    <div class="sub-header">
-        <h2>Colour <small>Grays</small></h2>
-    </div>
-    <table class="table table-striped table-bordered">
-        <tr>
-            <th>Variable</th>
-            <th>Hex Value</th>
-            <th>Color</th>
-        </tr>
-        <tr>
-            <td>@black</td>
-            <td>#000</td>
-            <td style="background-color:#000"></td>
-        </tr>
-        <tr>
-            <td>@grayDarker</td>
-            <td>#222</td>
-            <td style="background-color:#222"></td>
-        </tr>
-        <tr>
-            <td>@grayDark</td>
-            <td>#333</td>
-            <td style="background-color:#333"></td>
-        </tr>
-        <tr>
-            <td>@gray</td>
-            <td>#555</td>
-            <td style="background-color:#555"></td>
-        </tr>
-        <tr>
-            <td>@grayLight</td>
-            <td>#999</td>
-            <td style="background-color:#999"></td>
-        </tr>
-        <tr>
-            <td>@grayLighter</td>
-            <td>#eee</td>
-            <td style="background-color:#eee"></td>
-        </tr>
-        <tr>
-            <td>@white</td>
-            <td>#fff</td>
-            <td style="background-color:#fff"></td>
-        </tr>
+    <h3>Grayscale colors</h3>
+    <table class="table table-bordered table-striped">
+        <tbody>
+            <tr>
+                <td><code>@black</code></td>
+                <td>#000</td>
+                <td class="swatch-col"><span class="swatch" style="background-color: #000;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@grayDarker</code></td>
+                <td>#222</td>
+                <td><span class="swatch" style="background-color: #222;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@grayDark</code></td>
+                <td>#333</td>
+                <td><span class="swatch" style="background-color: #333;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@gray</code></td>
+                <td>#555</td>
+                <td><span class="swatch" style="background-color: #555;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@grayLight</code></td>
+                <td>#999</td>
+                <td><span class="swatch" style="background-color: #999;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@grayLighter</code></td>
+                <td>#eee</td>
+                <td><span class="swatch" style="background-color: #eee;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@white</code></td>
+                <td>#fff</td>
+                <td><span class="swatch swatch-bordered" style="background-color: #fff;"></span></td>
+            </tr>
+        </tbody>
     </table>
-    
-    <div class="sub-header">
-        <h2>Colour <small>Accent colors</small></h2>
-    </div>
-    <table class="table table-striped table-bordered">
-        <tr>
-            <th>Variable</th>
-            <th>Hex Value</th>
-            <th>Color</th>
-        </tr>
-        <tr>
-            <td>@blue</td>
-            <td>#049cdb</td>
-            <td style="background-color:#049cdb"></td>
-        </tr>
-        <tr>
-            <td>@blueDark</td>
-            <td>#0064cd</td>
-            <td style="background-color:#0064cd"></td>
-        </tr>
-        <tr>
-            <td>@green</td>
-            <td>#46a546</td>
-            <td style="background-color:#46a546"></td>
-        </tr>
-        <tr>
-            <td>@red</td>
-            <td>#9d261d</td>
-            <td style="background-color:#9d261d"></td>
-        </tr>
-        <tr>
-            <td>@yellow</td>
-            <td>#ffc40d</td>
-            <td style="background-color:#ffc40d"></td>
-        </tr>
-        <tr>
-            <td>@orange</td>
-            <td>#f89406</td>
-            <td style="background-color:#f89406"></td>
-        </tr>
-        <tr>
-            <td>@pink</td>
-            <td>#c3325f</td>
-            <td style="background-color:#c3325f"></td>
-        </tr>
-        <tr>
-            <td>@purple</td>
-            <td>#7a43b6</td>
-            <td style="background-color:#7a43b6"></td>
-        </tr>
+    <h3>Accent colors</h3>
+    <table class="table table-bordered table-striped">
+        <tbody>
+            <tr>
+                <td><code>@blue</code></td>
+                <td>#049cdb</td>
+                <td class="swatch-col"><span class="swatch" style="background-color: #049cdb;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@green</code></td>
+                <td>#46a546</td>
+                <td><span class="swatch" style="background-color: #46a546;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@red</code></td>
+                <td>#9d261d</td>
+                <td><span class="swatch" style="background-color: #9d261d;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@yellow</code></td>
+                <td>#ffc40d</td>
+                <td><span class="swatch" style="background-color: #ffc40d;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@orange</code></td>
+                <td>#f89406</td>
+                <td><span class="swatch" style="background-color: #f89406;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@pink</code></td>
+                <td>#c3325f</td>
+                <td><span class="swatch" style="background-color: #c3325f;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@purple</code></td>
+                <td>#7a43b6</td>
+                <td><span class="swatch" style="background-color: #7a43b6;"></span></td>
+            </tr>
+        </tbody>
     </table>
-    
+    <h3>Form states, alerts and wells</h3>
+    <table class="table table-bordered table-striped">
+        <tbody>
+            <tr>
+                <td><code>@warningText</code></td>
+                <td>#c09853</td>
+                <td><span class="swatch" style="background-color: #c09853;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@warningBackground</code></td>
+                <td>#f3edd2</td>
+                <td class="swatch-col"><span class="swatch" style="background-color: #f3edd2;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@errorText</code></td>
+                <td>#b94a48</td>
+                <td><span class="swatch" style="background-color: #b94a48;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@errorBackground</code></td>
+                <td>#f2dede</td>
+                <td><span class="swatch" style="background-color: #f2dede;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@successText</code></td>
+                <td>#468847</td>
+                <td><span class="swatch" style="background-color: #468847;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@successBackground</code></td>
+                <td>#dff0d8</td>
+                <td><span class="swatch" style="background-color: #dff0d8;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@infoText</code></td>
+                <td>#3a87ad</td>
+                <td><span class="swatch" style="background-color: #3a87ad;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@infoBackground</code></td>
+                <td>#d9edf7</td>
+                <td><span class="swatch" style="background-color: #d9edf7;"></span></td>
+            </tr>
+        </tbody>
+    </table>
+    <h3>Forms</h3>
+    <table class="table table-bordered table-striped">
+        <tbody>
+            <tr>
+                <td><code>@placeholderText</code></td>
+                <td><code>@grayLight</code></td>
+                <td class="swatch-col"><span class="swatch" style="background-color: #999;"></span></td>
+            </tr>
+        </tbody>
+    </table>
+    <h3>Navbar</h3>
+    <table class="table table-bordered table-striped">
+        <tbody>
+            <tr>
+                <td><code>@navbarHeight</code></td>
+                <td>40px</td>
+                <td class="swatch-col"></td>
+            </tr>
+            <tr>
+                <td><code>@navbarBackground</code></td>
+                <td><code>@grayDarker</code></td>
+                <td><span class="swatch" style="background-color: #222;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@navbarBackgroundHighlight</code></td>
+                <td><code>@grayDark</code></td>
+                <td><span class="swatch" style="background-color: #333;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@navbarText</code></td>
+                <td><code>@grayLight</code></td>
+                <td><span class="swatch" style="background-color: #999;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@navbarLinkColor</code></td>
+                <td><code>@grayLight</code></td>
+                <td><span class="swatch" style="background-color: #999;"></span></td>
+            </tr>
+            <tr>
+                <td><code>@navbarLinkColorHover</code></td>
+                <td><code>@white</code></td>
+                <td><span class="swatch swatch-bordered" style="background-color: #fff;"></span></td>
+            </tr>
+        </tbody>
+    </table>
     <div class="sub-header">
-        <h2>Typography <small>Base</small></h2>
+        <h2>Typography</h2>
     </div>
+    <h3>Base Fonts</h3>
     <table class="table table-striped table-bordered">
-        <tr>
-            <th>Variable</th>
-            <th>Value</th>
-            <th>Example</th>
-        </tr>
         <tr>
             <td>@baseFontSize</td>
             <td>13px</td>
-            <td></td>
+            <td class="swatch-col"></td>
         </tr>
         <tr>
             <td>@baseFontFamily</td>
@@ -160,18 +227,11 @@
         <tr>
             <td>@textColor</td>
             <td>@grayDark</td>
-            <td style="background-color:#333"></td>
+            <td><span class="swatch" style="background-color: #333;"></span></td>
         </tr>
     </table>
-    <div class="sub-header">
-        <h2>Typography <small>Headings</small></h2>
-    </div>
+    <h3>Headings</h3>
     <table class="table table-striped table-bordered">
-        <tr>
-            <th>Heading</th>
-            <th>Value</th>
-            <th>Example</th>
-        </tr>
         <tr>
             <td>h1</td>
             <td>font-size: 30px<br/>line-height: @baseLineHeight * 2</td>
@@ -261,31 +321,90 @@
             </td>
         </tr>
     </table>
-    <div class="sub-header">
-        <h2>Buttons</h2>
-    </div>
+    <h3>Buttons</h3>
     <table class="table table-striped table-bordered">
         <tr>
-            <th>Button Use</th>
-            <th>Class</th>
-            <th>Example</th>
-        </tr>
-        <tr>
-            <td>Default, any</td>
             <td>.btn</td>
+            <td></td>
+            <td></td>
+            <td class="swatch-col"></td>
             <td><button class="btn">Button</button></td>
         </tr>
         <tr>
-            <td>Primary</td>
             <td>.btn .btn-primary</td>
+            <td><code>@primaryButtonBackground</code></td>
+            <td><code>@linkColor</code></td>
+            <td><span class="swatch" style="background-color: #08c;"></span></td>
             <td><button class="btn btn-primary">Button</button></td>
         </tr>
         <tr>
-            <td>Secondary</td>
             <td>.btn .btn-success</td>
+            <td><code>.buttonBackground(lighten(@green, 15%), @green)</code></td>
+            <td>@green</td>
+            <td><span class="swatch" style="background-color: #46a546;"></span></td>
             <td><button class="btn btn-success">Button</button></td>
         </tr>
     </table>
+    <div class="sub-header">
+        <h2>Mixins</h2>
+    </div>
+    <h3>Utilities</h3>
+    <table class="table table-bordered table-striped">
+        <thead>
+            <tr>
+                <th>Mixin</th>
+                <th>Parameters</th>
+                <th>Usage</th>
+                <th>Example</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><code>.clearfix()</code></td>
+                <td><em class="muted">none</em></td>
+                <td>Add to any parent to clear floats within</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td><code>.tab-focus()</code></td>
+                <td><em class="muted">none</em></td>
+                <td>Apply the Webkit focus style and round Firefox outline</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td><code>.center-block()</code></td>
+                <td><em class="muted">none</em></td>
+                <td>.test-center { .center-block() }</td>
+                <td><span class="swatch test-center"></span></td>
+            </tr>
+            <tr>
+                <td><code>.ie7-inline-block()</code></td>
+                <td><em class="muted">none</em></td>
+                <td>Use in addition to regular <code>display: inline-block</code> to get IE7 support</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td><code>.size()</code></td>
+                <td><code>@height: 5px, @width: 5px</code></td>
+                <td>.test-size { .size(25px, 7px) }</td>
+                <td><span class="swatch test-size"></span></td>
+            </tr>
+            <tr>
+                <td><code>.square()</code></td>
+                <td><code>@size: 5px</code></td>
+                <td>.test-square { .square(25px) }</td>
+                <td><span class="swatch test-square"></span></td>
+            </tr>
+            <tr>
+                <td><code>.opacity()</code></td>
+                <td><code>@opacity: 100</code></td>
+                <td>.test-opacity { .opacity(50) }</td>
+                <td><span class="swatch test-opacity"></span></td>
+            </tr>
+        </tbody>
+    </table>
+    
+
     
 </article>
 {% endblock %}
