--- a/oscar/templates/dashboard/catalogue/product_update.html
+++ b/oscar/templates/dashboard/catalogue/product_update.html
@@ -1,10 +1,18 @@
 {% extends 'dashboard/layout.html' %}
 {% load currency_filters %}
-
+{% block body_class %}catalogue{% endblock %}
 {% block title %}
 Update product | {{ block.super }}
 {% endblock %}
-
+{% block breadcrumbs %}
+<ul class="breadcrumb">
+    <li>
+        <a href="{% url promotions:home %}">Dashboard</a>
+        <span class="divider">/</span>
+    </li>
+    <li class="active"><a href=".">Catalogue</a></li>
+</ul>
+{% endblock %}
 {% block header %}
 <div class="page-header">
 	<h1>{{ title }}</h1>
