added mixins to style_guide.html flatpage

--- a/oscar/static/css/dashboard.css
+++ b/oscar/static/css/dashboard.css
@@ -42,8 +42,7 @@ button {
 .orders .primary-nav li.Manage.orders > a,
 .users .primary-nav li.Users > a,
 .content-blocks .primary-nav li.Content.blocks > a,
-.catalogue .primary-nav li.Catalogue > a,
-.promotions .primary-nav li.Promotions > a {
+.catalogue .primary-nav li.Catalogue > a {
   color: #049cdb;
   text-shadow: 1px 1px 1px #fff;
   filter: dropshadow(color=#ffffff, offx=1, offy=1);
