better page scroll on href without extra js file, scrollTo js removed, layout template updated and other meathod intergrated

--- a/oscar/templates/partials/nav_accounts.html
+++ b/oscar/templates/partials/nav_accounts.html
@@ -1,4 +1,4 @@
-<div class="navbar accounts">
+<div id="top_page" class="navbar accounts">
 	<div class="navbar-inner">
 		<div class="container-fluid">
 			<a class="brand hidden" href="{% url promotions:home %}">Oscar</a>
