fixed legacy issue with snowcone.js and template restacking of js and classes.

--- a/oscar/templates/catalogue/detail.html
+++ b/oscar/templates/catalogue/detail.html
@@ -58,7 +58,7 @@
             
             <p><strong>Product Code:</strong> <code>{{ product.upc }}</code></p>
             {% if product.stockrecord %}
-			<p class="app-ico avaliability {{ product.stockrecord.availability_code }}">{{ product.stockrecord.availability|truncatewords:2|slice:"-4" }}</p>
+			<p class="app-ico {{ product.stockrecord.availability_code }} avaliability">{{ product.stockrecord.availability|truncatewords:2|slice:"-4" }}</p>
 			{% else %}
 				<p class="app-ico avaliability outofstock">Not available</p>
             {% endif %}
