--- a/oscar/templates/catalogue/partials/product.html
+++ b/oscar/templates/catalogue/partials/product.html
@@ -35,7 +35,7 @@
         {% else %}
             {% if product.has_stockrecord %} 
                 <h4><span>{{ product.stockrecord.price_incl_tax|currency }}</span></h4>
-                <p class="app-ico avaliability {{ product.stockrecord.availability_code }}">{{ product.stockrecord.availability|truncatewords:2|slice:"-4" }}</p>
+                <p class="app-ico {{ product.stockrecord.availability_code }} avaliability ">{{ product.stockrecord.availability|truncatewords:2|slice:"-4" }}</p>
             {% else %}
                 <p class="app-ico avaliability outofstock">Not available</p>
                 <button class="btn">Notify me</button> 
