fixed ie7 snowcone font error in accounts nav, added 4px margin to snowcone font for ie7, fixed ie7 footer border display

--- a/oscar/static/css/snowcone.css
+++ b/oscar/static/css/snowcone.css
@@ -66,7 +66,7 @@ Created: 01.06.2012 (US format date)
 /*========
 [=3:Ensure legacy browsers still see icons]
 ======== */ 		
-	.app-legacy_ico{font-family:'SnowconeRegular';}
+	.app-legacy_ico{font-family:'SnowconeRegular';margin-right:4px;}
 
 	
 
