--- a/oscar/static/less/page/account.less
+++ b/oscar/static/less/page/account.less
@@ -2,14 +2,16 @@
 // -----------
 /* Account Navbar */
 .navbar.accounts {
-  span {
-    padding: 10px 10px 11px;
-    line-height: 19px;
-    display: block;
-    color: @grayLight;
-    em {
-      
-    }
+  .nav {
+    div {
+      padding: 10px 10px 11px;
+      line-height: 19px;
+      display: block;
+      color: @grayLight;
+      em {
+
+      }
+    } 
   }
 }
 
