--- a/oscar/templates/partials/nav_accounts.html
+++ b/oscar/templates/partials/nav_accounts.html
@@ -4,7 +4,7 @@
 			<a class="brand hidden" href="{% url promotions:home %}">Oscar</a>
 			<ul class="nav pull-right">
 				{% if user.is_authenticated %}
-				<li><span>Welcome <em>{{ user.username }}</em></span></li>	
+				<li><div>Welcome <em>{{ user.username }}</em></div></li>	
 				<li> <a href="{% url customer:summary %}" class="app-ico ico_profile">Account</a></li>
 				<li><a href="{% url customer:logout %}" class="app-ico ico_logout">Logout</a></li>
 				{% if user.is_staff %}
