--- a/oscar/templates/promotions/automaticproductlist.html
+++ b/oscar/templates/promotions/automaticproductlist.html
@@ -8,7 +8,7 @@
     <!-- Elastislide Carousel -->
     <div class="es-carousel-wrapper">
         <div class="es-carousel">
-            <ul>
+            <ul class="products">
                 {% for product in promotion.get_products %}
                 <li>
                     <article class="product_pod">
